--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".GameActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,10 +18,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".GameResultActivity">
+        <activity android:name=".ResultActivity">
 
         </activity>
         <activity android:name=".ResultAddActivity">
+
+        </activity>
+        <activity android:name=".ForecastAddActivity">
+
+        </activity>
+        <activity android:name=".ForecastActivity">
 
         </activity>
     </application>
